deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: container-app
  template:
    metadata:
      labels:
        app: container-app
    spec:
      containers:
      - name: container-1
        image: dvdsilva/webcolor-blue
        ports:
        - containerPort: 3000
     
---
apiVersion: v1
kind: Service
metadata:
  name: service-blue
spec:
  selector:
    app: container-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000       # Porta exposta para fora do cluster
      targetPort: 3000  # Porta do container-1 que o serviço expõe
    #nodePort: 30080   # Porta que será aberta no host (opcional — Kubernetes atribui automaticamente se omitir)
